# DeepTrade

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  GEMINI.md  LICENSE  PLAN.md  README.md  code_review_against_design.md  code_review_round3_against_design.md  code_review_volume_anomaly_screen.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  release.yml
deeptrade/: __init__.py  cli.py  cli_config.py  cli_data.py  cli_plugin.py  theme.py
deeptrade/channels_builtin/stdout/: deeptrade_plugin.yaml
deeptrade/channels_builtin/stdout/stdout_channel/: channel.py
deeptrade/core/: __init__.py  config.py  config_migrations.py  db.py  deepseek_client.py  dep_installer.py  github_fetch.py  llm_client.py  llm_manager.py  logging_config.py  notifier.py  paths.py  plugin_manager.py  plugin_source.py  registry.py  run_status.py  secrets.py  tushare_client.py
deeptrade/core/migrations/core/: 20260427_001_init.sql  20260501_002_drop_llm_calls_stage.sql  20260509_001_init.sql  20260512_001_drop_legacy_tushare_cache.sql  20260515_002_affected_tables.sql
deeptrade/plugins_api/: __init__.py  base.py  channel.py  errors.py  events.py  llm.py  metadata.py  notify.py
deeptrade/strategies_builtin/limit_up_board/: deeptrade_plugin.yaml
deeptrade/strategies_builtin/limit_up_board/limit_up_board/: cli.py  data.py  pipeline.py  plugin.py  profiles.py  prompts.py  render.py  runner.py  runtime.py  schemas.py
deeptrade/strategies_builtin/volume_anomaly/: deeptrade_plugin.yaml
docs/: DESIGN.md  PLAN.md  distribution-and-plugin-install-design.md  init_process.md  limit-up-board-optimization-plan.md  limit-up-board.md  limit_up_board_ai_optimization_v2.md  plugin-development.md  plugin_cli_dispatch_evaluation.md  quick-start.md  textual_strategy_tui_migration_plan.md  volume_anomaly_optimization_plan.md  volume_anomaly_optimization_review.md  volume_anomaly_wave1_design.md  volume_anomaly_wave2_design.md
guide/plugin/strategy/: volume-anomaly.md
review/: review_report_design_vs_code.md  volume_anomaly_optimization_implementation_review.md
tests/: conftest.py  test_smoke.py
tests/cli/: test_config_cmd.py  test_plugin_cmd.py  test_routing.py  test_user_facing_strings_are_chinese.py
tests/core/: test_config.py  test_config_migrations.py  test_db.py  test_deepseek_client.py  test_github_fetch.py  test_llm_client.py  test_llm_client_streaming.py  test_llm_manager.py  test_notifier.py  test_paths.py  test_plugin_dependencies.py  test_plugin_install.py  test_plugin_security.py  test_plugin_source.py  test_plugin_upgrade.py  test_registry.py  test_secrets.py  test_tushare_classifier.py  test_tushare_client.py  test_tushare_retry_r1.py
tests/plugins_api/: test_api_version_2.py  test_errors.py  test_notify.py  test_protocol.py
tests/strategies_builtin/limit_up_board/: test_phase_a_factors.py  test_phase_b_factors.py  test_v04_settings.py
tests/strategies_builtin/volume_anomaly/: test_alpha_features.py  test_candidate_features.py  test_dimension_scores.py  test_prompt_consistency.py  test_realized_returns.py  test_screen_rules.py  test_stats_query.py
(+19 files in other folders)
