[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deeptrade-quant"
version = "0.4.2"
description = "LLM-driven A-share (Shanghai/Shenzhen main board) stock screening CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "DeepTrade" }]
license = { text = "MIT" }
keywords = ["stock", "a-share", "llm", "tushare", "deepseek", "duckdb", "cli"]

dependencies = [
    "typer>=0.12",
    "questionary>=2.0",
    "rich>=13.7",
    "duckdb>=1.0",
    "openai>=1.0",
    "pydantic>=2.7",
    "tenacity>=8.0",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "click>=8.1",
    "packaging>=23.0",
]

[project.optional-dependencies]
# Deps used ONLY by `deeptrade.core.tushare_client` (a plugin-facing service
# helper not imported by any framework runtime code path). Plugin authors that
# import TushareClient must declare these in their plugin's
# `deeptrade_plugin.yaml::dependencies`. Kept here so `uv sync --all-extras`
# still installs them for local tests of tushare_client.
plugin-runtime = [
    "tushare>=1.4",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
    # Pulled in transitively so the tushare_client test files load.
    "tushare>=1.4",
    "pandas>=2.2",
]

[project.scripts]
deeptrade = "deeptrade.cli:app"

[project.urls]
Homepage     = "https://github.com/ty19880929/deeptrade"
Repository   = "https://github.com/ty19880929/deeptrade"
Issues       = "https://github.com/ty19880929/deeptrade/issues"

[tool.hatch.build.targets.wheel]
packages = ["deeptrade"]

[tool.hatch.build.targets.sdist]
include = ["/deeptrade", "/tests", "/README.md", "/DESIGN.md", "/PLAN.md"]
